--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TestProj.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestProj.data.gz",
-        frameworkUrl: buildUrl + "/TestProj.framework.js.gz",
-        codeUrl: buildUrl + "/TestProj.wasm.gz",
+        dataUrl: buildUrl + "/TestProj.data",
+        frameworkUrl: buildUrl + "/TestProj.framework.js",
+        codeUrl: buildUrl + "/TestProj.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vhtsen",
         productName: "TestProject",
